--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ var _hmt = _hmt || [];
 
 </head>
 <body>
-	<H1> COOL MI</H1>
+	<img width="100%" height="100%" src="img/logo.jpg">  
+</div>  
 </body>
 </html>
