--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<link href="css/ohmygod.css" rel="stylesheet" type="text/css"/>
 </head>
 <body style="background-color:rgb(219,74,22);" >
-	<img width="100%" height="100%" src="img/logo.jpg">  
+	<img width="100%" height="100%" src="img/logo.jpg" align="middle">  
 </body>
 </html>
